# House4House

./: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.airflow  Dockerfile.airflow.uv  Makefile  README.md  TODOS.md  docker-compose.yml  llms.txt  pyproject.toml  sce_regions_example.json
.claude/: settings.json  (+1 more)
apps/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.uv  app.py  pyproject.toml  requirements.txt
apps/pages/: 1_investment_map.py  2_property_valuator.py  3_pricing_simulator.py  4_parcel_explorer.py  5_site_analyzer.py
pipelines/: CLAUDE.md  README.md  pyproject.toml
pipelines/api/bpstat/: README.md  bpstat_bronze_dag.py  bpstat_config.py  bpstat_ingestion_dag.py
pipelines/api/ecb/: README.md  ecb_bronze_dag.py  ecb_config.py  ecb_ingestion_dag.py
pipelines/api/eurostat/: README.md  eurostat_bronze_dag.py  eurostat_config.py  eurostat_ingestion_dag.py
pipelines/api/idealista/: CUTOVER.md  README.md  idealista_bronze_dag.py  idealista_config.py  idealista_dlt.py  idealista_ingestion_dag.py  rollback_idealista.sql  source.py
pipelines/api/ine/: README.md  ine_bronze_dag.py  ine_config.py  ine_ingestion_dag.py
pipelines/api/jll/: jll_dlt_dag.py  source.py
pipelines/api/remax/: CUTOVER.md  README.md  SITEMAP_REFACTOR_PROPOSAL.md  remax_bronze_developments_dag.py  remax_bronze_listings_dag.py  remax_config.py  remax_dlt_dag.py  remax_ingestion_dag.py
pipelines/api/template/: README.md  api_ingestion_template.py
pipelines/api/zome/: CUTOVER.md  README.md  rollback_zome.sql  source.py  zome_bronze_developments_dag.py  zome_bronze_listings_dag.py  zome_config.py  zome_dlt_dag.py  zome_ingestion_dag.py
pipelines/common/: NAMING_CONVENTIONS.md  PLOTS_RULES.md  PORTAL_FIELD_MAP.md  SCD2_RULES.md  geocoding.py  minio_upload.py
pipelines/dbt/: dbt_full_dag.py  dbt_gold_dag.py.disabled  dbt_scoped_dag.py  dbt_source_dags.py
pipelines/enrichment/: plot_listing_extraction_dag.py  sce_address_norm.py  sce_geocode_dag.py
(+511 files in other folders)
