[project]
name = "house4house-pipelines"
version = "0.1.0"
description = "Airflow + dlt + dbt pipelines for House4House"
requires-python = ">=3.12,<3.13"
dependencies = [
    # GIS / raster
    "pyogrio",
    "pyproj",
    "rasterio==1.4.3",
    "rio-cogeo==5.4.0",
    "tifffile",
    "pillow",
    # Storage / HTTP
    "minio==7.2.7",
    "requests>=2.31",
    "tenacity",
    # Scraping
    "beautifulsoup4",
    "nodriver",
    # LLM
    "anthropic",
    # Validation (used in Phase 2 config migration)
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    # Data load + transform
    "dlt[postgres]~=1.25.0",
    "dbt-postgres==1.9.0",
    # Airflow + Cosmos: pin to base image version + cosmos that
    # explicitly supports Airflow 2.x without bleeding airflow.sdk
    # (Airflow 3 namespace) imports. Cosmos 1.14+ is Airflow-3 first-class
    # and crashes against Airflow 2 via the cosmos plugin loader.
    "apache-airflow==2.10.4",
    "apache-airflow-providers-postgres>=5.10",
    "astronomer-cosmos[dbt-postgres]>=1.6,<1.7",
]

[tool.uv]
package = false
